2011-03-03  Tony Gentilcore  <tonyg@chromium.org>

Unreviewed build fix.

        Fix clang compile after r80220
        https://bugs.webkit.org/show_bug.cgi?id=55692

        * storage/IDBBackingStore.cpp:
        (WebCore::IDBBackingStore::getPrimaryKeyViaIndex):

Canonical link: https://commits.webkit.org/70160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80265 268f45cc-cd09-0410-ab3c-d52691b4dbfc